--- a/index.html
+++ b/index.html
@@ -36,5 +36,17 @@
             <i class="bi bi-list"></i>
         </div>
     </header>
+    <!--MAIN-->
+		<main class="main">
+			<div class="main__contenedor-titulo-parrafo">
+				<h1 class="main__titulo">No solo es Cafe es <span>Starbucks</span></h1>
+				<P class="main__parrafo"> Cada día, acudimos a trabajar con la esperanza de conseguir dos cosas: compartir el mejor café con nuestros 
+					amigos y contribuir a que el mundo sea un poco mejor. Así era cuando abrió la primera tienda Starbucks en 1971,
+					y así continúa siendo hoy.</P>
+			</div>
+			<div class="main__contenedor-logo">
+				<img class="main__logo" src="./images/starbucks.png"></img>
+			</div>
+		</main>
 </body>
 </html>
